# local-guard

./: .gitignore  AGENTS.md  Cargo.toml  DEVLOG.md  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  version-release-win32.yml
contracts/: analysis-response.schema.json  ingest-request.schema.json
contracts/fixtures/: analysis-response.valid.json  ingest-request.valid.json
crates/local-guard-analysis-contract/: Cargo.toml
crates/local-guard-analysis-contract/src/: lib.rs
crates/local-guard-app/: Cargo.toml  build.rs
crates/local-guard-app/src/: lib.rs  main.rs
crates/local-guard-app/tests/: analysis_category_mapping_tests.rs  analysis_response_parsing_tests.rs  auth_guard_tests.rs  auth_state_machine_tests.rs  batch_to_payload_integration_tests.rs  capture_scheduler_tests.rs  consent_gate_tests.rs  display_selection_tests.rs  idempotency_key_tests.rs  kill_switch_behavior_tests.rs  log_redaction_tests.rs  privacy_guardrail_tests.rs  runtime_status_projection_tests.rs  transport_security_tests.rs  upload_error_classification_tests.rs  upload_retry_policy_tests.rs  version_display_tests.rs
crates/local-guard-app/tests/common/: mod.rs
crates/local-guard-auth/: Cargo.toml
crates/local-guard-auth/src/: lib.rs
crates/local-guard-benchmarks/: Cargo.toml
crates/local-guard-benchmarks/src/: lib.rs
crates/local-guard-benchmarks/tests/: nfr_smoke.rs
crates/local-guard-capture/: Cargo.toml
crates/local-guard-capture/src/: lib.rs
crates/local-guard-contract-tests/: Cargo.toml
crates/local-guard-contract-tests/src/: lib.rs
crates/local-guard-contract-tests/tests/: contract_validation.rs
crates/local-guard-core/: Cargo.toml
crates/local-guard-core/src/: lib.rs
crates/local-guard-core/tests/: metadata_integrity_tests.rs  mosaic_ordering_tests.rs  payload_codec_tests.rs
crates/local-guard-mosaic/: Cargo.toml
crates/local-guard-mosaic/src/: lib.rs
crates/local-guard-ui/: Cargo.toml
crates/local-guard-ui/src/: lib.rs
crates/local-guard-upload/: Cargo.toml
crates/local-guard-upload/src/: lib.rs
docs/: AGENT_WORKFLOW.md  RUST_STYLE_GUIDE.md  THREAT_MODEL.md
docs/adr/: ADR-0001-capture-backend.md  ADR-0002-ui-toolkit.md  ADR-0003-auth-http-approach.md
